--- a/GeoOffersSampleApp/Base.lproj/Main.storyboard
+++ b/GeoOffersSampleApp/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="WSI-dO-6Nl">
-                                <rect key="frame" x="16" y="64" width="343" height="248"/>
+                                <rect key="frame" x="16" y="64" width="343" height="314"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BMp-4d-YhJ">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
@@ -68,6 +68,17 @@
                                             <action selector="presentOffers" destination="BYZ-38-t0r" eventType="touchUpInside" id="FsI-UB-uTO"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tl0-BA-bdA">
+                                        <rect key="frame" x="0.0" y="264" width="343" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="okh-Vo-i7e"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="s8A-90-jba"/>
+                                        </constraints>
+                                        <state key="normal" title="Show Cached Notifications"/>
+                                        <connections>
+                                            <segue destination="b54-NT-ERy" kind="show" identifier="showNotifications" id="v1e-0s-guZ"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -87,6 +98,84 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="133.5832083958021"/>
+        </scene>
+        <!--NotificationsViewController-->
+        <scene sceneID="vGe-SM-TYo">
+            <objects>
+                <viewController storyboardIdentifier="NotificationsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="b54-NT-ERy" userLabel="NotificationsViewController" customClass="NotificationsViewController" customModule="GeoOffersSampleApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rU9-Cs-x6H">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k2G-HE-O2H">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NotificationSummaryCell" rowHeight="58" id="nnL-xz-IkT" customClass="NotificationSummaryCell" customModule="GeoOffersSampleApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="58"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nnL-xz-IkT" id="ySV-3f-qgc">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="57.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmL-tV-V4a">
+                                                    <rect key="frame" x="16" y="4" width="343" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DlI-3Q-3BR">
+                                                    <rect key="frame" x="16" y="33" width="343" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="DlI-3Q-3BR" firstAttribute="leading" secondItem="ySV-3f-qgc" secondAttribute="leading" constant="16" id="7EA-68-0hv"/>
+                                                <constraint firstItem="DlI-3Q-3BR" firstAttribute="top" secondItem="dmL-tV-V4a" secondAttribute="bottom" constant="8" id="7p2-88-jr6"/>
+                                                <constraint firstAttribute="trailing" secondItem="dmL-tV-V4a" secondAttribute="trailing" constant="16" id="GpV-Ia-LRe"/>
+                                                <constraint firstAttribute="bottom" secondItem="DlI-3Q-3BR" secondAttribute="bottom" constant="4" id="MCY-Rt-lGm"/>
+                                                <constraint firstItem="dmL-tV-V4a" firstAttribute="leading" secondItem="ySV-3f-qgc" secondAttribute="leading" constant="16" id="aoA-Se-H1p"/>
+                                                <constraint firstAttribute="trailing" secondItem="DlI-3Q-3BR" secondAttribute="trailing" constant="16" id="uDh-vp-ElR"/>
+                                                <constraint firstItem="dmL-tV-V4a" firstAttribute="top" secondItem="ySV-3f-qgc" secondAttribute="top" constant="4" id="yQ8-Qa-fmX"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="createdAt" destination="dmL-tV-V4a" id="cec-n8-70D"/>
+                                            <outlet property="summary" destination="DlI-3Q-3BR" id="ke8-6L-M4G"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="b54-NT-ERy" id="aNY-II-7Gc"/>
+                                    <outlet property="delegate" destination="b54-NT-ERy" id="IPO-RZ-cPd"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="k2G-HE-O2H" firstAttribute="top" secondItem="US0-TI-n7g" secondAttribute="top" id="Qsj-lS-4oh"/>
+                            <constraint firstItem="US0-TI-n7g" firstAttribute="bottom" secondItem="k2G-HE-O2H" secondAttribute="bottom" id="Qu9-er-nSH"/>
+                            <constraint firstItem="k2G-HE-O2H" firstAttribute="leading" secondItem="US0-TI-n7g" secondAttribute="leading" id="cos-be-YQM"/>
+                            <constraint firstItem="US0-TI-n7g" firstAttribute="trailing" secondItem="k2G-HE-O2H" secondAttribute="trailing" id="zz2-vr-0Yq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="US0-TI-n7g"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="Y2I-VJ-GF7">
+                        <barButtonItem key="rightBarButtonItem" title="Clear all" id="aQh-qd-9f6">
+                            <connections>
+                                <action selector="deleteAll" destination="b54-NT-ERy" id="KaM-Aa-e2W"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="k2G-HE-O2H" id="qNv-xZ-rKY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NFd-Tc-pfU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2077.5999999999999" y="133.5832083958021"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uHI-DH-3cd">
