--- a/GeoOffersSampleApp/Base.lproj/Main.storyboard
+++ b/GeoOffersSampleApp/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="WSI-dO-6Nl">
-                                <rect key="frame" x="16" y="64" width="343" height="380"/>
+                                <rect key="frame" x="16" y="64" width="343" height="446"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BMp-4d-YhJ">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
@@ -93,6 +93,17 @@
                                         <state key="normal" title="Show Cached Notifications"/>
                                         <connections>
                                             <segue destination="b54-NT-ERy" kind="show" identifier="showNotifications" id="v1e-0s-guZ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BZF-UV-htM">
+                                        <rect key="frame" x="0.0" y="396" width="343" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="9fG-Ke-ghD"/>
+                                            <constraint firstAttribute="height" constant="50" id="HFk-4n-JgX"/>
+                                        </constraints>
+                                        <state key="normal" title="Show Map"/>
+                                        <connections>
+                                            <segue destination="pgq-rJ-bY0" kind="show" id="EQi-uK-xUH"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -203,6 +214,73 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NFd-Tc-pfU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2077.5999999999999" y="133.5832083958021"/>
+        </scene>
+        <!--MapViewController-->
+        <scene sceneID="VgN-UU-Dsh">
+            <objects>
+                <viewController storyboardIdentifier="MapViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pgq-rJ-bY0" userLabel="MapViewController" customClass="MapViewController" customModule="GeoOffersSampleApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L8B-9E-lw3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rdf-an-SrC">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <connections>
+                                    <outlet property="delegate" destination="pgq-rJ-bY0" id="HQm-Wi-DO9"/>
+                                </connections>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Rdf-an-SrC" firstAttribute="top" secondItem="L8B-9E-lw3" secondAttribute="top" id="GVm-5a-dLP"/>
+                            <constraint firstAttribute="trailing" secondItem="Rdf-an-SrC" secondAttribute="trailing" id="g8Z-h9-EML"/>
+                            <constraint firstItem="Rdf-an-SrC" firstAttribute="leading" secondItem="L8B-9E-lw3" secondAttribute="leading" id="his-fH-TbN"/>
+                            <constraint firstAttribute="bottom" secondItem="Rdf-an-SrC" secondAttribute="bottom" id="qeh-aB-7kk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fTH-EB-7iv"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="cWd-zt-fXF">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="Kgc-bI-wT2">
+                            <view key="customView" contentMode="scaleToFill" id="gkB-0O-EP3">
+                                <rect key="frame" x="276" y="5.5" width="83" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="OiF-oV-Okn">
+                                        <rect key="frame" x="0.0" y="0.0" width="83" height="33"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Only monitored" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSe-dr-qd2">
+                                                <rect key="frame" x="0.0" y="0.0" width="79" height="33"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P60-Xw-6VJ">
+                                                <rect key="frame" x="83" y="0.0" width="2" height="33"/>
+                                                <connections>
+                                                    <action selector="didToggle" destination="pgq-rJ-bY0" eventType="valueChanged" id="2Ja-cG-t14"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="OiF-oV-Okn" firstAttribute="leading" secondItem="gkB-0O-EP3" secondAttribute="leading" id="6EU-uB-S08"/>
+                                    <constraint firstItem="OiF-oV-Okn" firstAttribute="top" secondItem="gkB-0O-EP3" secondAttribute="top" id="C4d-ii-OLh"/>
+                                    <constraint firstAttribute="trailing" secondItem="OiF-oV-Okn" secondAttribute="trailing" id="NUW-Uz-4W9"/>
+                                    <constraint firstAttribute="bottom" secondItem="OiF-oV-Okn" secondAttribute="bottom" id="dD3-Yd-i1T"/>
+                                </constraints>
+                            </view>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="map" destination="Rdf-an-SrC" id="XFH-Fg-tWS"/>
+                        <outlet property="toggle" destination="P60-Xw-6VJ" id="wiX-Jk-WRJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nGv-j6-a5w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2078" y="939"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uHI-DH-3cd">
