--- a/GeoOffersSampleApp/Base.lproj/Main.storyboard
+++ b/GeoOffersSampleApp/Base.lproj/Main.storyboard
@@ -247,7 +247,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BiA-gV-lbb">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BiA-gV-lbb">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -303,11 +303,18 @@
                         <viewLayoutGuide key="safeArea" id="vdz-S6-anR"/>
                     </view>
                     <navigationItem key="navigationItem" title="Tracking" id="rAH-JM-WY3">
-                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="KBb-HX-MO8">
-                            <connections>
-                                <action selector="refreshAction" destination="hXn-p5-UCV" id="Pt5-Ws-fUZ"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="refresh" id="KBb-HX-MO8">
+                                <connections>
+                                    <action selector="refreshAction" destination="hXn-p5-UCV" id="Pt5-Ws-fUZ"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="action" id="Kan-9A-A0Q">
+                                <connections>
+                                    <action selector="shareData:" destination="hXn-p5-UCV" id="BZL-d8-6HY"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="BiA-gV-lbb" id="gWf-0q-qYg"/>
